# CHOIR

./: .gitignore  README.md  config.py  debug.ipynb  eval_knn_error.py  pyproject.toml  requirements-condor.txt  requirements-wo-pytorch3d.txt  requirements.txt  setup.py  test_cls.py  test_orientation.py  test_partseg.py  train.py  train_cls.py  train_partseg.py  vis.ipynb
ConDor/ConDor_pytorch/: config_capsules_multi.yaml
VNSPD/models/: __init__.py  networks.py  shape_pose_model.py
VNSPD/util/: pc_utils.py
canonical_capsules/models/: acne_ae.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: shapenet.yaml
configs/experiment/: airplane.yaml  car.yaml  chair.yaml  multi.yaml  table.yaml
configs/logger/: wandb.yaml
configs/model/: choir.yaml  choir_9d.yaml
configs/optim/: adam.yaml
configs/paths/: default.yaml
configs/scheduler/: cosine.yaml
configs/trainer/: ddp.yaml  default.yaml
data/: synsetoffset2category.txt
scripts/: test_orientation.sh  train_orientation-multi_ours_intra-aug.sh  train_orientation-multi_ours_intra.sh  train_orientation-multi_pt-large-lr.sh  train_orientation-multi_pt-large.sh  train_orientation-multi_pt-lr.sh  train_orientation-multi_pt-medium-lr.sh  train_orientation-multi_pt-medium.sh  train_orientation-multi_pt-raw-large.sh  train_orientation-multi_pt-raw-medium.sh  train_orientation-multi_pt-raw.sh  train_orientation-plane_ours.sh  train_orientation-plane_ours_intra.sh
scripts/legacy/: train_classwise.sh  train_classwise_base.sh  (+4 more)
src/: eval.py  rotation.py  train.py  utils.py
(+48 files in other folders)
